--- a/Demos/04-insights/InsightsDemo/WebApp/Web.config
+++ b/Demos/04-insights/InsightsDemo/WebApp/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:ClientId" value="76e40036-3687-4f68-9b92-84a6bac2fdc3" />
-    <add key="ida:ClientSecret" value="txmqWTGH665-:rptWYJ69:$" />
+    <add key="ida:ClientId" value="" />
+    <add key="ida:ClientSecret" value="" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}{1}" />
     <add key="ida:RedirectUri" value="https://localhost:44326/" />
     <add key="vs:EnableBrowserLink" value="false" />
