--- a/Demos/02-webhooks/WebhooksDemo/WebApp/Web.config
+++ b/Demos/02-webhooks/WebhooksDemo/WebApp/Web.config
@@ -9,20 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    
     <add key="ida:ClientId" value="" />
-    <add key="ida:ClientSecret" value="" />    
-    <add key="ida:NotificationUrl" value="https://YOURWEBAPP.azurewebsites.net/notification/listen" />
-    
+    <add key="ida:ClientSecret" value="" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}{1}" />
-    
-    <add key="ida:RedirectUri" value="https://YOURWEBAPP.azurewebsites.net/" />
-
-    <!-- Use the local one for debugging 
-    <add key="ida:RedirectUri" value="https://localhost:44326/"/>
-    -->
+    <add key="ida:RedirectUri" value="https://YOURAPP.azurewebsites.net" />
     <add key="vs:EnableBrowserLink" value="false" />
-    
+    <add key="ida:NotificationUrl" value="https://YOURAPP.azurewebsites.net/notification/listen" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -55,6 +47,14 @@
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.40306.1554" newVersion="4.0.40306.1554" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Protocol.Extensions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.40306.1554" newVersion="1.0.40306.1554" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
@@ -64,15 +64,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.28" newVersion="4.0.2.28" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.IdentityModel.Protocol.Extensions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.2.28" newVersion="1.0.2.28" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
