--- a/Demos/05-batch/BatchDemo/Batch/packages.config
+++ b/Demos/05-batch/BatchDemo/Batch/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Graph" version="1.7.0" targetFramework="net47" />
-  <package id="Microsoft.Graph.Core" version="1.7.0" targetFramework="net47" />
-  <package id="Microsoft.Identity.Client" version="1.1.0-preview" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Graph" version="1.10.0" targetFramework="net47" />
+  <package id="Microsoft.Graph.Core" version="1.10.0" targetFramework="net47" />
+  <package id="Microsoft.Identity.Client" version="1.1.4-preview0002" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
